--- a/application/layouts/scripts/layout_gerente_rh.phtml
+++ b/application/layouts/scripts/layout_gerente_rh.phtml
@@ -20,6 +20,7 @@
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/apolice.css") ?> />
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/datedropper.css") ?> />
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/my-style.css") ?> />
+        <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/funcionario.css") ?> />
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/style.css") ?> />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     </head>
@@ -36,39 +37,14 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="<?= $this->baseUrl("admin-local") ?>">
+                            <a class="nav-link" href="<?= $this->baseUrl("") ?>">
                                 <i class="fas fa-home"></i>
                                 Início
                                 <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="<?= $this->baseUrl("trajeto") ?>">
-                                Trajetos
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="<?= $this->baseUrl("concessaotrajeto") ?>">
-                                Concessões
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="<?= $this->baseUrl("apolice") ?>">
-                                Apólices
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="<?= $this->baseUrl("linha") ?>">
-                                Linhas
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="<?= $this->baseUrl("manutencao") ?>">
-                                Manutenção
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="<?= $this->baseUrl("rodoviarias-passagem-local") ?>">
-                                Rodoviárias
+                            <a class="nav-link" href="<?= $this->baseUrl("funcionario") ?>">
+                                Funcionários
                             </a>
                         </li>
                     </ul>
