--- a/application/layouts/scripts/layout_secretario.phtml
+++ b/application/layouts/scripts/layout_secretario.phtml
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="<?= $this->baseUrl("secretario") ?>">
+                            <a class="nav-link" href="<?= $this->baseUrl("") ?>">
                                 <i class="fas fa-home"></i>
                                 Início 
                                 <span class="sr-only">(current)</span></a>
