Adição de alguns atributos e caixa de diálogo padrão no sinistro.js

--- a/application/views/scripts/sinistro/index.phtml
+++ b/application/views/scripts/sinistro/index.phtml
@@ -49,6 +49,40 @@
                                 </div>                                                      
                             </div>
 
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <label for="descricao" id="label">Pagador</label><label  style="color:red" id="label">*</label>
+                                    <div style="padding-bottom: 5px">
+                                        <input type="text" class="form-control" id="pagador" placeholder="Quem paga" >
+                                    </div>
+                                    <div class="alert-lt alert-danger validaPagador"  align="center" style="display:none" role="alert">
+                                        Campo obrigatório
+                                    </div>
+                                </div>                                                      
+
+                                <div class="col-lg-4">
+                                    <label for="descricao" id="label">Data</label><label  style="color:red" id="label">*</label>
+                                    <div style="padding-bottom: 5px">
+                                        <input type="date" class="form-control" id="data" placeholder="Data" >
+                                    </div>
+                                    <div class="alert-lt alert-danger validaData"  align="center" style="display:none" role="alert">
+                                        Campo obrigatório
+                                    </div>
+                                </div>                                                      
+
+                                <div class="col-lg-4">
+                                    <label for="descricao" id="label">Hora</label><label  style="color:red" id="label">*</label>
+                                    <div style="padding-bottom: 5px">
+                                        <input type="text" class="form-control" id="hora" placeholder="Hora" >
+                                    </div>
+                                    <div class="alert-lt alert-danger validaCusto"  align="center" style="display:none" role="alert">
+                                        Campo obrigatório
+                                    </div>
+                                </div>                                                      
+                            </div>
+
+
+
 
                             <div class="row">
                                 <div class="col-lg-8">
