--- a/application/views/scripts/sinistro/index.phtml
+++ b/application/views/scripts/sinistro/index.phtml
@@ -21,7 +21,7 @@
                                 <div class="col-lg-4">
                                     <label for="descricao" id="label">Causa</label><label  style="color:red" id="label">*</label>
                                     <div style="padding-bottom: 5px">
-                                        <input type="text" class="form-control" id="causa" placeholder="Causa" >
+                                        <input type="text" class="form-control" id="causa" name="causa" placeholder="Causa" >
                                     </div>
                                     <div class="alert-lt alert-danger validaCausa"  align="center" style="display:none" role="alert">
                                         Campo obrigatório
@@ -31,7 +31,7 @@
                                 <div class="col-lg-4">
                                     <label for="descricao" id="label">Culpado</label><label  style="color:red" id="label">*</label>
                                     <div style="padding-bottom: 5px">
-                                        <input type="text" class="form-control" id="culpado" placeholder="Culpado" >
+                                        <input type="text" class="form-control" id="culpado" name="culpado" placeholder="Culpado" >
                                     </div>
                                     <div class="alert-lt alert-danger validaCulpado"  align="center" style="display:none" role="alert">
                                         Campo obrigatório
@@ -41,7 +41,7 @@
                                 <div class="col-lg-4">
                                     <label for="descricao" id="label">Custo</label><label  style="color:red" id="label">*</label>
                                     <div style="padding-bottom: 5px">
-                                        <input type="text" class="form-control" id="custo" placeholder="Custo" >
+                                        <input type="text" class="form-control" id="custo" name="custo" placeholder="Custo" >
                                     </div>
                                     <div class="alert-lt alert-danger validaCusto"  align="center" style="display:none" role="alert">
                                         Campo obrigatório
@@ -53,7 +53,7 @@
                                 <div class="col-lg-4">
                                     <label for="descricao" id="label">Pagador</label><label  style="color:red" id="label">*</label>
                                     <div style="padding-bottom: 5px">
-                                        <input type="text" class="form-control" id="pagador" placeholder="Quem paga" >
+                                        <input type="text" class="form-control" id="pagante" name="pagante" placeholder="Quem paga" >
                                     </div>
                                     <div class="alert-lt alert-danger validaPagador"  align="center" style="display:none" role="alert">
                                         Campo obrigatório
@@ -63,7 +63,7 @@
                                 <div class="col-lg-4">
                                     <label for="descricao" id="label">Data</label><label  style="color:red" id="label">*</label>
                                     <div style="padding-bottom: 5px">
-                                        <input type="date" class="form-control" id="data" placeholder="Data" >
+                                        <input type="date" class="form-control" id="data" name="data" placeholder="Data" >
                                     </div>
                                     <div class="alert-lt alert-danger validaData"  align="center" style="display:none" role="alert">
                                         Campo obrigatório
@@ -73,7 +73,7 @@
                                 <div class="col-lg-4">
                                     <label for="descricao" id="label">Hora</label><label  style="color:red" id="label">*</label>
                                     <div style="padding-bottom: 5px">
-                                        <input type="text" class="form-control" id="hora" placeholder="Hora" >
+                                        <input type="text" class="form-control" id="hora" name="hora" placeholder="Hora" >
                                     </div>
                                     <div class="alert-lt alert-danger validaCusto"  align="center" style="display:none" role="alert">
                                         Campo obrigatório
@@ -88,7 +88,7 @@
                                 <div class="col-lg-8">
                                     <label for="descricao" id="label">Descrição</label><label  style="color:red" id="label">*</label>
                                     <div style="padding-bottom: 5px">
-                                        <textarea name="descricao" id="descricao" rows="3" class="form-control" placeholder="Descrição"></textarea>
+                                        <textarea name="descricao" id="descricao" name="descricao" rows="3" class="form-control" placeholder="Descrição"></textarea>
                                     </div>
 
                                     <div class="alert-lt alert-danger validaDescricao"  align="center" style="display:none" role="alert">
@@ -107,7 +107,7 @@
                                             </div>
 
 
-                                            <input type="text" class="form-control" src=""  disabled id="descricao-trecho-inicio">
+                                            <input type="text" class="form-control" src=""  disabled id="onibus">
                                         </div>
                                     </a>
                                     <div class="alert-lt alert-danger validaInicio" align="center" style="display:none" role="alert">
