botão de selecionar o onibus funcionando

--- a/application/views/scripts/sinistro/index.phtml
+++ b/application/views/scripts/sinistro/index.phtml
@@ -85,7 +85,7 @@
 
 
                             <div class="row">
-                                <div class="col-lg-8">
+                                <div class="col-lg-7">
                                     <label for="descricao" id="label">Descrição</label><label  style="color:red" id="label">*</label>
                                     <div style="padding-bottom: 5px">
                                         <textarea name="descricao" id="descricao" name="descricao" rows="3" class="form-control" placeholder="Descrição"></textarea>
@@ -95,7 +95,7 @@
                                         Campo obrigatório
                                     </div>
                                 </div>
-                                <div class="col-lg-4" >
+                                <div class="col-lg-5" >
                                     <label for="descricao" id="label">Ônibus</label><label  style="color:red" id="label">*</label>
                                     <!-- <input type="text" class="form-control" id="inicio" placeholder="Local inicial da linha"> -->
                                     <a data-toggle="modal" data-target="#exampleModalCenter-inicio" id="validaInicio">
@@ -107,7 +107,7 @@
                                             </div>
 
 
-                                            <input type="text" class="form-control" src=""  disabled id="onibus">
+                                            <input type="text" class="form-control" src=""  disabled id="id_onibus">
                                         </div>
                                     </a>
                                     <div class="alert-lt alert-danger validaInicio" align="center" style="display:none" role="alert">
@@ -188,7 +188,7 @@
                 </select>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-success" id="alocar-trecho-inicio" data-dismiss="modal">Ok</button>
+                <button type="button" class="btn btn-success" id="alocar" data-dismiss="modal">Ok</button>
 
 
             </div>
