--- a/application/layouts/scripts/layout_secretario.phtml
+++ b/application/layouts/scripts/layout_secretario.phtml
@@ -10,6 +10,7 @@
         <link rel="icon" type="image/png" href=<?= $this->baseUrl("dist/img/bus.png") ?> />
         <!--Caminho da public "$this->baseUrl()-->
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/bootstrap-cerulean.css") ?> />
+        
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/secretario.css") ?> />
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/trajeto.css") ?> />
@@ -54,16 +55,10 @@
                     </ul>
 
                     <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" title="Conta PampaBus" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fas fa-user"></i>
-                                Fulano
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" data-toggle="modal" data-target="#Modal-sair" accesskey="s" title="(Alt+s) Sair">
+                                <u>S</u>air
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Dados Pessoais</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Sair</a>
-                            </div>
                         </li>
                     </ul>
                 </div>
@@ -75,7 +70,29 @@
             <?php echo $this->layout()->content; ?>
         </main>
 
-
+        <div class="modal fade" id="Modal-sair" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h5 class="modal-title float-left" style="color:black;"></h5>
+                    </div>
+                    <div class="modal-body">
+                        <h5>
+                            Deseja realmente sair do sistema?
+                        </h5>
+                    </div>
+                    <div class="modal-footer">
+                        <a class="btn btn-primary" href="<?= $this->baseUrl('/admin-secretario/sair') ?>">
+                            Confirmar
+                        </a>
+                        <a class="btn btn-dark" style="color: white; cursor: pointer;" data-dismiss="modal">
+                            Cancelar
+                        </a>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
 
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/jquery-3.3.1.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootstrap.js') ?>"></script>
